--- a/vector-search.ipynb
+++ b/vector-search.ipynb
@@ -11,10 +11,10 @@
     "import os\n",
     "import openai\n",
     "\n",
-    "client = pymongo.MongoClient(\"mongodb+srv://pramodborkar:ronny12@cluster0.vtuioyd.mongodb.net/\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://<username>:<password>@cluster0.vtuioyd.mongodb.net/\")\n",
     "db = client.sample_mflix\n",
     "collection = db.embedded_movies\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"<api token>\"\n",
     "model = \"text-embedding-ada-002\""
    ]
   },
